--- a/css/main.css
+++ b/css/main.css
@@ -142,26 +142,28 @@ button:focus,
     transform: rotate(-405deg);
 }
 
-.main-nav {
+.main-nav ul {
     margin: 0;
     padding: 0;
     display: flex;
     height: 100%;
+    justify-content: center;
 }
 
-.main-nav__link-container {
+.main-nav li {
     margin: 0 0 0 42px;
     position: relative;
     transition: 0.4s;
     border: none;
     outline: none;
+    display: inline-block;
 }
 
-.main-nav__link-container:first-child {
+.main-nav li:first-child {
     margin-left: 0;
 }
 
-.main-nav__link {
+.main-nav a {
     color: #fff;
     font-size: 16px;
     line-height: 20px;
@@ -174,44 +176,6 @@ button:focus,
 
 .main-nav__link_active {
     color: #0056A6;
-}
-
-.main-nav__dropdown {
-    display: none;
-    position: absolute;
-    background-color: #0056A6;
-    width: 480px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
-    margin: 0 0 0 -24px;
-    list-style: none;
-    border-radius: 24px;
-    padding: 24px 0;
-}
-
-.main-nav__dropdown-item:last-child {
-    margin-bottom: 0;
-}
-
-.main-nav__dropdown-link {
-    padding: 10px 20px 10px 40px;
-    display: block;
-    color: #fff;
-}
-
-.main-nav__dropdown-link:hover {
-    color: #fff;
-    background: #4BC5EC;
-}
-
-.main-nav__link_dropdown:after {
-    content: "";
-    display: inline-block;
-    width: 12px;
-    height: 6px;
-    background: url("../img/arrow-down.svg") no-repeat;
-    background-size: contain;
-    margin-left: 10px;
 }
 
 /* Show the dropdown menu on hover */
