--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,7 +174,11 @@ button:focus,
     height: 100%;
 }
 
-.main-nav__link_active {
+.main-nav a:hover {
+    color: #0056A6;
+}
+
+.main-nav a.active {
     color: #0056A6;
 }
 
